--- a/INDEX.html
+++ b/INDEX.html
@@ -221,8 +221,8 @@
             <section>
                 <div class="rodape-conteudo2">
                     <h2><i class="fas fa-map-marker-alt"></i> Endereço:</h2>
-                    <p>Av. Poços de Caldas, nº 1875, Bl 15, Apto 404 - Residencial Praia do Forte - Ponta Negra -
-                        Natal/RN - CEP: 59.091-200</p>
+                    <p>Rua Patativas, nº 7996, Pitimbu - Conjunto Cidade Satélite -
+                        Natal/RN - CEP: 59.067-380</p>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3968.7862597618987!2d-35.19749438591188!3d-5.885629859587875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b2f9e22a83beff%3A0xd66d71b1caf9da85!2sResidencial%20Praia%20do%20Forte!5e0!3m2!1spt-BR!2sbr!4v1643495180725!5m2!1spt-BR!2sbr"
                         width="450" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
