--- a/INDEX.html
+++ b/INDEX.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Quintessential&display=swap"
             rel="stylesheet">
         <script src="https://kit.fontawesome.com/1681fb0384.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" type="text/css" href="STYLE.css">
+        <link rel="stylesheet" type="text/css" href="./style.css">
         <link rel="shortcut icon" href="IMAGENS/favicon.ico" type="image/x-icon" sizes="320x320">
         <title>LA | Advogados</title>
     </head>
