--- a/index.html
+++ b/index.html
@@ -223,9 +223,8 @@
                     <h2><i class="fas fa-map-marker-alt"></i> Endereço:</h2>
                     <p>Rua Patativas, nº 7996, Pitimbu - Conjunto Cidade Satélite -
                         Natal/RN - CEP: 59.067-380</p>
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3968.7862597618987!2d-35.19749438591188!3d-5.885629859587875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b2f9e22a83beff%3A0xd66d71b1caf9da85!2sResidencial%20Praia%20do%20Forte!5e0!3m2!1spt-BR!2sbr!4v1643495180725!5m2!1spt-BR!2sbr"
-                        width="450" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3968.894847978339!2d-35.23399118569465!3d-5.870403147818041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b255e38d0aa345%3A0x85bcdfdebee550db!2sR.%20das%20Patativas%2C%207996%20-%20Pitimb%C3%BA%2C%20Natal%20-%20RN%2C%2059067-380!5e0!3m2!1spt-BR!2sbr!4v1663465942262!5m2!1spt-BR!2sbr" 
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </section>
             <div class="rodape-menu-redes-sociais">
